kubernetes/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f task-resolver/.docker/docker-compose.yaml -o task-resolver-infra/kubernetes
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: api
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f task-resolver/.docker/docker-compose.yaml -o task-resolver-infra/kubernetes
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: api
    spec:
      imagePullSecrets:
        - name: harbor-creds
      containers:
        - image: harbor.devops-teta.ru/bergman-valery/api:latest
          imagePullPolicy: Always
          name: api-service
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/api-service/config.yaml
              name: api-cm0
              subPath: config.yaml
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: api-config.yaml
                path: config.yaml
            name: api-cm0
          name: api-cm0
