kubernetes/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f task-resolver/.docker/docker-compose.yaml -o task-resolver-infra/kubernetes
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: kafka-svc
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kafka-svc
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f task-resolver/.docker/docker-compose.yaml -o task-resolver-infra/kubernetes
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: kafka-svc
    spec:
      containers:
        - env:
            - name: KAFKA_ADVERTISED_HOST_NAME
              value: kafka
            - name: KAFKA_ZOOKEEPER_CONNECT
              value: zookeeper:2181
          image: wurstmeister/kafka
          name: kafka
          ports:
            - containerPort: 9092
              protocol: TCP
      restartPolicy: Always
