kubernetes/web-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml -o /tmp/k8s/
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: web-ui
  name: web-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web-ui
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml -o /tmp/k8s/
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: web-ui
    spec:
      imagePullSecrets:
        - name: harbor-creds
      containers:
        - env:
            - name: BASE_REST_API_URL
              value: https://bergman-task-resolver-api.mfti.devops-teta.ru/api/v1
          image: harbor.devops-teta.ru/bergman-valery/web-ui:latest
          name: web-ui
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
