kubernetes/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f task-resolver/.docker/docker-compose.yaml -o task-resolver-infra/kubernetes
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: worker
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: worker
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f task-resolver/.docker/docker-compose.yaml -o task-resolver-infra/kubernetes
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: worker
    spec:
      imagePullSecrets:
        - name: harbor-creds
      containers:
        - image: harbor.devops-teta.ru/bergman-valery/worker@sha256:799e9277abcfb8ad1605b3e5139c9316f51324e383e83c88f57506943af4fe25
          name: worker-service
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /app/config.yaml
              name: worker-cm0
              subPath: config.yaml
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: worker-config.yaml
                path: config.yaml
            name: worker-cm0
          name: worker-cm0
