kubernetes/agent-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f task-resolver/.docker/docker-compose.yaml -o task-resolver-infra/kubernetes
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: agent
  name: agent
spec:
  ports:
    - name: "9999"
      port: 9999
      targetPort: 8080
  selector:
    io.kompose.service: agent
