kubernetes/data-provider-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f task-resolver/.docker/docker-compose.yaml -o task-resolver-infra/kubernetes
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: data-provider
  name: data-provider
spec:
  ports:
    - name: "6543"
      port: 6543
      targetPort: 8080
  selector:
    io.kompose.service: data-provider
