kubernetes/web-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml -o /tmp/k8s/
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: web-ui
  name: web-ui
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 3000
  selector:
    io.kompose.service: web-ui
